[tool.poetry]
name = "pystock"
version = "0.1.0"
description = ""
authors = ["yoshiki <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
requests = "^2.23.0"
jupyterlab = "^2.1.0"
beautifulsoup4 = "^4.9.0"
lxml = "^4.5.0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
