[tool.poetry]
name = "kabutobashi"
version = "0.6.3"
description = ""
authors = ["yoshiki <yoshiki0911@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.3"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"
lxml = "^4.9.1"
jpholiday = "^0.1.8"
matplotlib = "^3.3.4"
mplfinance = "^0.12.7-alpha.7"
Cerberus = "^1.3.4"
scipy = "^1.8.0"
pydantic = "^1.10.4"
injector = "^0.20.1"
xlrd = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.1"
flake8-cognitive-complexity = "^0.1.0"

[tool.poetry.group.doc.dependencies]
myst-parser = "^0.15.2"
sphinx = "^4.0.0"
sphinx_rtd_theme = "^0.5.0"
guzzle_sphinx_theme = "^0.7.11"
sphinxcontrib-mermaid = "^0.7.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.0"
twine = "^3.1.1"
wheel = "^0.38.1"
memory-profiler = "^0.60.0"
s3fs = "^2021.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120
exclude = """
/(
    .git
    | .venv
    | .mypy_cache
    | .pytest_cache
    | data
    | docs
    | htmlcov
    | notebook
/)
"""

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

# options: https://flake8.pycqa.org/en/latest/user/options.html
[tool.flake8]
max-line-length = 120
max-complexity = 20
ignore = "E203,E266,W503"
per-file-ignores = "*/__init__.py:F401"
max-cognitive-complexity = 20
