[tool.poetry]
name = "kabutobashi"
version = "0.7.2"
description = "Analyze stock"
authors = ["yoshiki <yoshiki0911@gmail.com>"]
license = "MIT"
repository = 'https://github.com/gsy0911/kabutobashi'
readme = 'README.md'
keywords = ['stock']

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
jpholiday = "^0.1.8"
matplotlib = "^3.8.1"
mplfinance = "^0.12.10b0"
Cerberus = "^1.3.4"
scipy = "^1.11.3"
pydantic = "^2.4.2"
injector = "^0.21.0"
xlrd = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint.dependencies]
isort = "^5.12.0"
black = "^23.10.1"
mypy = "^1.6.1"
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.12.1"
flake8-cognitive-complexity = "^0.1.0"

[tool.poetry.group.doc.dependencies]
myst-parser = "^2.0.0"
sphinx = "^7.2.6"
sphinx_rtd_theme = "^1.3.0"
guzzle_sphinx_theme = "^0.7.11"
sphinxcontrib-mermaid = "^0.9.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
memory-profiler = "^0.60.0"
s3fs = "^2023.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120
exclude = """
/(
    .git
    | .venv
    | .mypy_cache
    | .pytest_cache
    | data
    | docs
    | htmlcov
    | notebook
/)
"""

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

# options: https://flake8.pycqa.org/en/latest/user/options.html
[tool.flake8]
max-line-length = 120
max-complexity = 20
ignore = "E203,E266,W503"
per-file-ignores = "*/__init__.py:F401"
max-cognitive-complexity = 20
